Improved code readability. Corrected some errors.

--- a/angular-require-seed/www/partials/helloWorld/index.html
+++ b/angular-require-seed/www/partials/helloWorld/index.html
@@ -1,2 +1,1 @@
-﻿<!--This HTML will replace the element attributed this directive. There must be a root element.-->
-<p class="hello-world" ng-click="alert()">Hello World!</p>
+﻿<p class="hello-world" ng-click="alert()">Hello World! <!--This HTML will replace the element attributed this directive. There must be a root element.--></p>
